--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
@@ -257,7 +257,7 @@
                 $('#STOK_ADLARI').val('');
                 $('#STOK_ADLARI').prop("disabled", true);
 
-                $('#BarkodButton').prop("disabled", true);
+                $('#BarkodButton').prop("disabled", false);
                 $("#BARKOD_LISTE_BUTTON").prop("disabled", true);
 
                 $('#MIKTAR').val("");
@@ -596,9 +596,7 @@
                 ShowProgress();
 
                 KalemleriSil().then(() => {
-                    GirisDepo = -1;
-                    CikisDepo = -1;
-
+                    
                     switch (KayitTipi) {
                         case 0:
                             BelgeKaydet();
@@ -669,6 +667,9 @@
                             'Content-Type': 'application/json'
                         },
                         success: function () {
+                            GirisDepo = -1;
+                            CikisDepo = -1;
+
                             Swal.fire(
                                 'Başarılı!',
                                 'İşlem başarılı',
