--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
@@ -1546,24 +1546,25 @@
                     <td>${MiktarFormatla(TOPLAM_MIKTAR1)}</td>
                 </tr>`;
             }
-
-            var STR = `<table class="table table-striped table-bordered" style="text-align: center;vertical-align: middle;width: 100%; word-break: auto-phrase;">
-                <thead>
-                    <th>STOK ADI</th>
-                    <th>MİKTAR 2</th>
-                    <th>MİKTAR 1</th>
-                </thead>
-                <tbody>
-                ${tableBody}
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td><b>GENEL TOPLAM</b></td>
-                        <td><b>${MiktarFormatla(GENEL_TOPLAM_MIKTAR2)}</b></td>  
-                        <td><b>${MiktarFormatla(GENEL_TOPLAM_MIKTAR1)}</b></td>
-                    </tr>
-                </tfoot>
-            </table>`
+            
+            var STR = `<div class="d-flex flex-column justify-content-center align-items-center gap-2"><span>Belge üzerinde toplam <b>${Kayitlar.length}</b> kalem mevcut.</span>
+    <table class="table table-striped table-bordered" style="text-align: center;vertical-align: middle;width: 100%; word-break: auto-phrase;">
+        <thead>
+            <th>STOK ADI</th>
+            <th>MİKTAR 2</th>
+            <th>MİKTAR 1</th>
+        </thead>
+        <tbody>
+            ${tableBody}
+        </tbody>
+        <tfoot>
+            <tr>
+                <td><b>GENEL TOPLAM</b></td>
+                <td><b>${MiktarFormatla(GENEL_TOPLAM_MIKTAR2)}</b></td>
+                <td><b>${MiktarFormatla(GENEL_TOPLAM_MIKTAR1)}</b></td>
+            </tr>
+        </tfoot>
+    </table></div>`;
 
             Swal.fire({
                 title: "BELGE ÖZETİ",
